@@ -10,6 +10,7 @@ Release 0.20.0 - Unreleased
                online as difference between whats open and whats on filesystem
                (Samuel Guo via Stack)
    HBASE-1130  PrefixRowFilter (Michael Gottesman via Stack)
+   HBASE-1139  Update Clover in build.xml
 
 Release 0.19.0 - Unreleased
   INCOMPATIBLE CHANGES
